# geocell

./: .gitignore  LICENSE  README.md  article.md  main.py  pyproject.toml  ruff.toml
layout/: __init__.py  app.py  code.py  geoapp.py  geocell.py  page_configuration.py  styles.py  test_driveless.csv  test_geoapp.py  test_geocell.csv
